PRE-17 fix vertical radio button align

--- a/views/css/less/component/payplug/paymentOption.less
+++ b/views/css/less/component/payplug/paymentOption.less
@@ -6,10 +6,17 @@
   }
   img {
     margin: 0 12px 0 5px;
-    height: 33px;
+    height: 30px;
 
     @media (@tablet) {
       display: none;
+    }
+  }
+  .custom-radio {
+    margin-top: 0.25rem;
+
+    @media (@tablet) {
+      margin-top: 0;
     }
   }
 }
